examples/datalog/15_arithmetic/22_arithmetic_in_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_arith_filter
Knowledge graph 'test_arith_filter' created.
Switched to knowledge graph: test_arith_filter
> .kg use test_arith_filter
Switched to knowledge graph: test_arith_filter
> +nums[(1, 10), (2, 20), (3, 30), (4, 40), (5, 50)].
Inserted 5 fact(s) into 'nums'.
> ?- nums(Id, Val), Val > Id * 15.
Script error: Query execution failed: Unsupported comparison: Variable("Val") GreaterThan Arithmetic(Binary { op: Mul, left: Variable("Id"), right: Constant(15) })
