examples/datalog/15_arithmetic/22_arithmetic_in_filter.dl
% Test: Arithmetic expressions in filter conditions
% Expected: Arithmetic evaluated correctly in filters
% Category: 15_arithmetic
% Priority: P1 - Arithmetic completeness

.kg create test_arith_filter
.kg use test_arith_filter

% Numbers to test
+nums[(1, 10), (2, 20), (3, 30), (4, 40), (5, 50)].

% Filter where value > id * 10 (should return nothing since value = id * 10)
?- nums(Id, Val), Val > Id * 15.

% Filter where value equals id * 10
?- nums(Id, Val), Val = Id * 10.

.kg use default
.kg drop test_arith_filter
